2004-02-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dropper-context.cpp (sp_dropper_context_root_handler):
	Cleanup: use translate rather than setting individual matrix elements.

	* src/libnr/nr-matrix-ops.h (operator*: Matrix*rotate, translate*scale,
	scale*translate, Matrix*scale): New functions.

2004-02-22  Ted Gould <ted@gould.cx>

	* src/extension/Makefile.am, src/extension/implementation/Makefile.am,
	src/Makefile.am, po/POTFILES.in, po/*.po (because of previous change):
	Okay, I screwed up.  Here are some distcheck fixes for various
	things.  Still not entirely clean.  But these are much closer
	than we were.

2004-02-22  Ted Gould <ted@gould.cx>

	* src/modules -> src/extensions:
	Changing the directory name so that it fits the new naming
	conventions that we're working with.

2004-02-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/desktop.cpp (sp_desktop_init, sp_desktop_set_display_area):
	* src/libnrtype/nr-font.cpp (nr_font_generic_glyph_outline_get):
	* src/libnrtype/nr-typeface.cpp (nr_font_new_default):
	Don't use implicit NR::Matrix conversions.

	* src/libnr/nr-translate-ops.h (operator!=): new.

	* src/sp-item.h, src/sp-item.cpp (sp_item_bbox_desktop):
	Add NR::Rect version.

	* src/inkview.cpp: Address compiler warning: declare is_jar iff it is
	defined, i.e. #ifdef WITH_INKJAR.

	* src/desktop-snap.cpp, src/desktop.h, src/object-edit.cpp,
	src/sp-root.cpp, src/livarot/PathConversion.cpp,
	src/widgets/sp-color-wheel.cpp:
	Add some #include's to reduce how much nr-matrix.h must pull in.

	* src/desktop-affine.cpp, src/knotholder.cpp,
	src/desktop-events.cpp, src/nodepath.cpp, src/sp-ellipse.cpp,
	src/sp-image.cpp, src/sp-item-notify-moveto.cpp, src/sp-rect.cpp,
	src/text-context.cpp:
	#include libnr/nr-matrix-ops.h.

2004-02-22  Ted Gould <ted@gould.cx>

	* doc/Makefile.am, po/POTFILES.in: keeping these up to date
	for distchecks.

2004-02-21  Ted Gould <ted@gould.cx>
